--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_login.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.fragmentLogin">
+    tools:context=".Fragments.FragmentLogin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="400dp"
@@ -23,7 +23,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Email" />
+            android:text="Email" />
 
         <EditText
             android:id="@+id/etFragmentLoginEmail"
@@ -43,12 +43,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="TextView"
+            android:text="Lozinka"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etFragmentLoginEmail"
-            tools:text="Lozinka" />
+            />
 
         <EditText
             android:id="@+id/etFragmentLoginPassword"
