--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_register.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.fragmentRegister">
+    tools:context=".Fragments.FragmentRegister">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -46,8 +46,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etFragmentRegisterEmail"
-            tools:text="Lozinka" />
+            app:layout_constraintTop_toBottomOf="@+id/etFragmentRegisterEmail" />
 
         <TextView
             android:id="@+id/tvFragmentRegisterEmail"
@@ -59,7 +58,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etFragmentRegisterName"
-            tools:text="Email" />
+            android:text="Email" />
 
         <EditText
             android:id="@+id/etFragmentRegisterUser"
