--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_login.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_login.xml
@@ -10,31 +10,29 @@
         android:layout_width="400dp"
         android:layout_height="352dp"
         android:layout_gravity="center_horizontal"
-
+        android:padding="20dp"
         >
 
         <TextView
             android:id="@+id/tvFragimentLoginEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="4dp"
             android:backgroundTint="#00B8D4"
+            android:text="Email"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Email" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/etFragmentLoginEmail"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:ems="10"
             android:hint="primer@gmail.com"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvFragimentLoginEmail" />
 
@@ -54,12 +52,12 @@
             android:id="@+id/etFragmentLoginPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:ems="10"
             android:hint="*********"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvFragmentLoginPassword" />
 
