--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_register.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_register.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.FragmentRegister">
 
+
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="400dp"
-        android:layout_height="521dp"
+        android:padding="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal">
 
         <EditText
@@ -54,19 +56,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:backgroundTint="#00B8D4"
+            android:text="Email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etFragmentRegisterName"
-            android:text="Email" />
+            app:layout_constraintTop_toBottomOf="@+id/etFragmentRegisterName" />
 
         <EditText
             android:id="@+id/etFragmentRegisterUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="korisnik123
-"
+            android:hint="PetarP"
             android:inputType="textPersonName"
             app:layout_constraintTop_toBottomOf="@+id/tvFragmentRegisterUser"
             tools:layout_editor_absoluteX="-16dp" />
@@ -95,10 +96,10 @@
             android:id="@+id/tvFragmentRegisterUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
+            android:layout_marginTop="4dp"
             android:text="Korisničko ime"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp" />
+            tools:layout_editor_absoluteX="20dp" />
 
         <Button
             android:id="@+id/btnFragmentRegisterRegister"
@@ -111,40 +112,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etFragmentRegisterPassword" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="200dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="176dp"
-            android:background="@drawable/rounded_cyan_button"
-            android:gravity="center"
-            android:text="REGISTRUJ SE"
-            android:textColor="#ffffff"
-            android:textSize="16dp"
-            android:translationZ="50dp"
-            app:layout_constraintBottom_toTopOf="@+id/tvFragmentRegisterUser"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.058"
-            app:layout_constraintStart_toStartOf="@+id/button2"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="230dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="16dp"
-            android:background="@drawable/switch_login_register_on"
-            android:backgroundTint="#D1BCBC"
-            android:foreground="@drawable/rounded_white_button_login"
-
-            android:text="Registruj se"
-            android:textColor="#00B8D4"
-            android:translationZ="1dp"
-            app:layout_constraintBottom_toTopOf="@+id/tvFragmentRegisterUser"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.511" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
