--- a/Client/BrzoDoLokacije/app/src/main/res/values-night/themes.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Base application theme.
     <style name="Theme.BrzoDoLokacije" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
+
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">#071935</item>
-        <!-- Secondary brand color. -->
+
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">#071935</item>
-        <!-- Status bar color. -->
+
         <item name="android:statusBarColor">#143257</item>
-        <!-- Customize your theme here. -->
-    </style>
+
+    </style>-->
 </resources>
