--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_add_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_add_post.xml
@@ -11,4 +11,13 @@
         android:layout_height="match_parent"
         android:text="Post Add" />
 
+    <Button
+        android:id="@+id/btnFragmentAddLogOut"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rounded_cyan_button"
+        android:backgroundTint="#1C789A"
+        android:text="Log Out" />
+
 </FrameLayout>
