Podešen izgled Login i Register stranice. Dodati resursi za podešavanje izgleda.

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_login.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_login.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
     tools:context=".Fragments.FragmentLogin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="400dp"
-        android:layout_height="352dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:padding="20dp"
-        >
+
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/tvFragimentLoginEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:backgroundTint="#00B8D4"
             android:text="Email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +45,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etFragmentLoginEmail"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/etFragmentLoginEmail" />
 
         <EditText
             android:id="@+id/etFragmentLoginPassword"
