--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_register.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_register.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.FragmentRegister">
+    tools:context=".Fragments.FragmentRegister"
+    android:layout_gravity="center_horizontal"
+
+>
 
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:padding="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
+        android:layout_height="432dp"
+        android:layout_gravity="center_horizontal"
+        android:padding="20dp">
 
         <EditText
             android:id="@+id/etFragmentRegisterPassword"
