Dodat ActivityForgottenPassword. Povezane aktivnosti za promenu zaboravljene lozinke.

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_forgotten_password_verify.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_forgotten_password_verify.xml
@@ -7,8 +7,8 @@
     tools:context=".Activities.ActivityForgottenPassword">
 
     <LinearLayout
-        android:layout_width="399dp"
-        android:layout_height="556dp"
+        android:layout_width="398dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,45 +26,76 @@
             android:id="@+id/tvActivityForgottenPasswordText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Zaboravljena lozinka?"
+            android:text="Verifikuj novu lozinku"
             android:textSize="25dp" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Unesi Email adresu na koju ćemo ti poslati kod za resetovanje." />
+            android:text="Unesi kod koji je poslat na email." />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="30dp" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Email" />
 
         <EditText
             android:id="@+id/editTextTextPersonName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Unesi Email"
+            android:hint="Unesi kod"
             android:inputType="textPersonName" />
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="30dp" />
+            android:layout_height="20dp" />
+
+        <TextView
+            android:id="@+id/textViewoldpass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nova lozinka" />
+
+        <EditText
+            android:hint="*********"
+            android:id="@+id/editTextoldPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <TextView
+            android:id="@+id/textViewnewpass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="Potvrdi novu lozinku" />
+
+        <EditText
+            android:hint="*********"
+            android:id="@+id/editTextTextPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
 
         <Button
-            android:id="@+id/forgottenPasswordSendCode"
+            android:id="@+id/btnChangePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_cyan_button"
             android:gravity="center"
-            android:text="Pošalji Email za promenu lozinke" />
+            android:text="Promeni lozinku" />
 
         <Space
             android:layout_width="match_parent"
