--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_add_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_add_post.xml
@@ -6,10 +6,14 @@
     tools:context=".Fragments.FragmentAddPost">
 
     <!-- TODO: Update blank fragment layout -->
+    
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Post Add" />
+        android:layout_height="20dp"/>
+
+    
+    
+    <!--
 
     <Button
         android:id="@+id/btnFragmentAddLogOut"
@@ -18,6 +22,6 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/rounded_cyan_button"
         android:backgroundTint="#1C789A"
-        android:text="Log Out" />
+        android:text="Log Out" />-->
 
 </FrameLayout>
