--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
@@ -4,17 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_padding="5dp"
-    android:layout_margin="0dp"
+    android:layout_margin="5dp"
     android:background="@drawable/rounded_picture_background"
     android:clipToOutline="true"
 >
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/locationImage"
         android:layout_width="match_parent"
         android:layout_height="330dp"
-        android:layout_padding="0dp"
         android:outlineProvider="background"
         android:src="@drawable/b1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,19 +23,19 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/vBanner"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@color/dark_blue_transparent"
         android:outlineProvider="background"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
+        app:layout_constraintBottom_toBottomOf="@+id/locationImage"
         tools:layout_editor_absoluteX="0dp">
 
 
     </View>
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="top|left"
@@ -47,37 +45,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.076"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/vBanner"
         app:layout_constraintVertical_bias="0.18" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tvLocationType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tip lokacije"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"
+        app:layout_constraintBottom_toBottomOf="@+id/vBanner"
+        app:layout_constraintEnd_toStartOf="@+id/tvLocationParent"
         app:layout_constraintHorizontal_bias="0.112"
         app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/vBanner"
         app:layout_constraintVertical_bias="0.721" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tvLocationParent"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="right"
-        android:gravity="right"
         android:text="grad, drzava"
-        android:textAlignment="gravity"
+        android:textAlignment="viewEnd"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.952"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/vBanner"
         app:layout_constraintVertical_bias="0.737" />
 
 
