--- a/Client/BrzoDoLokacije/app/src/main/res/drawable/rounded_picture_background.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/drawable/rounded_picture_background.xml
@@ -2,4 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners  android:radius="20dp"/>
     <solid android:color="#FFFFFF"></solid>
+<!--    <padding-->
+<!--        android:left="10dp"-->
+<!--        android:top="5dp"-->
+<!--        android:right="10dp"-->
+<!--        android:bottom="5dp" >-->
+
+<!--    </padding>-->
 </shape>
