zapocet rad na prikazu jedne objave, dodata lista slika #16

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
@@ -9,11 +9,13 @@
     android:clipToOutline="true"
 >
 
+
     <ImageView
         android:id="@+id/locationImage"
         android:layout_width="match_parent"
-        android:layout_height="330dp"
+        android:layout_height="250dp"
         android:outlineProvider="background"
+        android:scaleType="centerCrop"
         android:src="@drawable/b1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +76,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/vBanner"
         app:layout_constraintVertical_bias="0.737" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
