--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_single_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_single_post.xml
@@ -23,20 +23,20 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Naslov" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/tvLocationType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
             android:text="tip lokacije" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/tvLocationParent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Drzava, grad" />
@@ -51,35 +51,35 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView8"
+                    android:id="@+id/star1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:src="@android:drawable/btn_star_big_on" />
 
                 <ImageView
-                    android:id="@+id/imageView9"
+                    android:id="@+id/star2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:src="@android:drawable/btn_star_big_on" />
 
                 <ImageView
-                    android:id="@+id/imageView10"
+                    android:id="@+id/star3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:src="@android:drawable/btn_star_big_on" />
 
                 <ImageView
-                    android:id="@+id/imageView11"
+                    android:id="@+id/star4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:src="@android:drawable/btn_star_big_on" />
 
                 <ImageView
-                    android:id="@+id/imageView12"
+                    android:id="@+id/star5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -87,7 +87,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/tvRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -96,7 +96,7 @@
                 tools:layout_editor_absoluteY="0dp" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/tvNumberOfRatings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="(10,500)"
@@ -113,7 +113,7 @@
             android:elevation="5dp">
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/tvDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"
