--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
@@ -6,34 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".Activities.ActivityAddPost">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_weight="1"
-        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostUploadImages"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/btnActivityAddPostUploadImages"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_width="417dp"
+        android:layout_height="61dp"
         android:layout_gravity="center"
         android:layout_weight="0"
         android:text="Importuj"
         app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPosTakeImage"
-        tools:layout_editor_absoluteX="-16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnActivityAddPosTakeImage"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_width="417dp"
+        android:layout_height="57dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="4dp"
         android:layout_weight="0"
+
         android:text="Slikaj"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="-16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/nextImage"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:background="@drawable/rounded_transparent_button"
+        android:gravity="right"
+        android:textColor="@color/material_dynamic_primary30"
+        android:padding="30dp"
+        app:icon="@drawable/ic_baseline_arrow_forward"
+        app:iconTint="#072242"
+        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostUploadImages"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/previousImage"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:padding="30dp"
+
+        android:gravity="left"
+        android:background="@drawable/rounded_transparent_button"
+        android:textColor="@color/material_dynamic_primary30"
+        app:icon="@drawable/ic_baseline_arrow_back"
+        app:iconTint="#0E283C"
+        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostUploadImages"
+        app:layout_constraintEnd_toStartOf="@+id/nextImage"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <ImageSwitcher
+        android:id="@+id/switcher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostUploadImages"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
