--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_add_new.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_add_new.xml
@@ -10,6 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -22,11 +23,11 @@
             android:stateListAnimator="@null"
             android:text="Nova lokacija"
             android:textColor="@color/cardview_dark_background"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/flFragmentAddNewFragmentContainer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btnFragmentAddNewNewPost"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.00999999" />
+            app:layout_constraintVertical_bias="0.997" />
 
         <Button
             android:id="@+id/btnFragmentAddNewNewPost"
@@ -37,33 +38,36 @@
 
             android:text="Nova objava"
             android:textColor="@color/cardview_dark_background"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/flFragmentAddNewFragmentContainer"
             app:layout_constraintEnd_toStartOf="@+id/btnFragmentAddNewNewLocation"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.00999999" />
+            app:layout_constraintVertical_bias="0.997" />
 
         <View
             android:id="@+id/divider3"
             android:layout_width="409dp"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider"
+            app:layout_constraintBottom_toTopOf="@+id/flFragmentAddNewFragmentContainer"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnFragmentAddNewNewPost" />
+            app:layout_constraintTop_toBottomOf="@+id/btnFragmentAddNewNewPost"
+            app:layout_constraintVertical_bias="1.0" />
 
         <FrameLayout
             android:id="@+id/flFragmentAddNewFragmentContainer"
-            android:layout_width="409dp"
-            android:layout_height="673dp"
+            android:layout_width="411dp"
+            android:layout_height="309dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent">
 
         </FrameLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
 </FrameLayout>
