--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_capture_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_capture_post.xml
@@ -8,11 +8,11 @@
 
         <ImageView
             android:id="@+id/ivActivityCapturePostImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="184dp"
+            android:layout_width="408dp"
+            android:layout_height="319dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
@@ -21,9 +21,12 @@
             android:id="@+id/btnActivityCapturePostCapture"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="68dp"
             app:cornerRadius="30dp"
             app:icon="@android:drawable/ic_menu_camera"
+            app:layout_constraintBottom_toTopOf="@+id/tvActivityCapturePostLocationtext"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivActivityCapturePostImage" />
 
