--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_browse.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_browse.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.FragmentBrowse">
+    <org.osmdroid.views.MapView
+        android:id="@+id/FragmentBrowseMapView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Browse" />
+
 
 </FrameLayout>
