--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
@@ -9,7 +9,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rvFragmentHomePagePopular"
         android:layout_width="0dp"
         android:layout_height="160dp"
         android:layout_marginStart="16dp"
@@ -115,7 +115,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView">
+        app:layout_constraintTop_toBottomOf="@+id/rvFragmentHomePagePopular">
 
         <LinearLayout
             android:id="@+id/linearLayout2"
@@ -196,6 +196,7 @@
         app:layout_constraintTop_toBottomOf="@+id/scrollview" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFragmentHomePageLatest"
         android:layout_width="0dp"
         android:layout_height="174dp"
         android:layout_marginStart="16dp"
