--- a/Client/BrzoDoLokacije/app/src/main/res/values/styles.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/values/styles.xml
@@ -11,10 +11,10 @@
         <item name="color">@color/white</item>
     </style>
     <style name="Circular">
-        <item name="cornerSize">20%</item>
+        <item name="cornerSize">20dp</item>
     </style>
     <style name="roundedBottom">
-        <item name="cornerSizeBottomLeft">70dp</item>
-        <item name="cornerSizeBottomRight">70dp</item>
+        <item name="cornerSizeBottomLeft">20dp</item>
+        <item name="cornerSizeBottomRight">20dp</item>
     </style>
 </resources>
